--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dn-middleware-webpack-dev-server",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "webpack dev server middleware for dawn",
   "main": "./lib/index.js",
   "scripts": {
@@ -22,5 +22,8 @@
   },
   "dependencies": {
     "webpack-dev-server": "^2.11.0"
+  },
+  "devDependencies": {
+    "react-dev-utils": "^5.0.1"
   }
 }
